--- a/Staff.css
+++ b/Staff.css
@@ -30,7 +30,7 @@
     content: TM Staff;
     background: url('http://www.gotigersolutions.com/images/medal-gold.png');
     padding: 3px 6px;
-    color: white;
+    color: #808691;
     bottom: 20px;
     position: absolute;
     left: 5px;
@@ -51,7 +51,7 @@
 
 #user-rollover.id-15253919 .meta:after {
     content: 'TM Developer';
-    color: white;
+    color: #808691;
     position: absolute;
     top: 121px;
     left: 110px;
