New Update Owner.css

--- a/Owner.css
+++ b/Owner.css
@@ -1,7 +1,7 @@
 /* MsiGaming | Developer = 3669054 */
 
 #user-rollover.id-3669054 .badge-box > i.bdg {
-    border-radius: 6px;
+    border-radius: 10px;
     background-image: url("");
     background-size: cover;
     background-repeat: no-repeat;
@@ -28,15 +28,15 @@
 /* MsiGaming | Developer = 3669054 */
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 200px;
+    height: 150px;
 }
 
 element.style {
-    height: 200px;
+    height: 150px;
 }
 
 #user-rollover .meta {
-    min-height: 200px;
+    min-height: 126px;
 }
 
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
@@ -55,7 +55,7 @@ element.style {
     content: TM Owner;
     background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
     padding: 3px 6px;
-    color: darkred;
+    color: ;
     bottom: 20px;
     position: absolute;
     left: 5px;
@@ -64,7 +64,7 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 200px ;
+    height: 150px ;
 }
 
 #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
@@ -85,7 +85,7 @@ element.style {
 /* MsiGaming | Developer = 3669054 */
 
 #user-lists .list .user.id-3669054 .name:after, #chat [data-cid^='4405644-'] .un:after, #user-lists .list .user.id-3669054 .name:after, #chat [data-cid^='4613422-'] .un:after, #user-lists .list .user.id-3669054 .name:after, #chat [data-cid^='4412452-'] .un:after {
-    content: 'CSS';
+    content: 'developer/css/theme';
     display: inline-block;
     margin: 4px;
     padding: 0px;
@@ -100,28 +100,28 @@ element.style {
 /* MsiGaming | Developer = 3669054 */
 
 #user-rollover.id-3669054 .meta {
-    height: 200px;
+    height: 150px;
 }
 
 element.style {
-    height: 200px;
+    height: 150px;
 }
 
 element.style {
-    weight: 35.699%;
+    weight: 35.999%;
 
 #user-rollover .meta {
-    min-height: 200px;
+    min-height: 150px;
 }
 
 #user-rollover.id-3669054 .meta:before {
-    content: 'CSS Devs';
+    content: 'CSS/Devs';
     top: 136px;
     left: 110px;
     position: absolute;
     display: inline-block;
     padding: 0px;
-    color: green;
+    color: ;
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
     border-radius: 0px;
     font-size: 10px;
@@ -129,7 +129,7 @@ element.style {
 
 #user-rollover.id-3669054 .meta:after {
     content: 'TM Developer';
-    color: blue;
+    color: ;
     position: absolute;
     top: 121px;
     left: 110px;
