New Update Users CSS

--- a/Users.css
+++ b/Users.css
@@ -1,6 +1,6 @@
  }
- /* TitanMusic | Developer */
-/* TitanMusic | Developer */
+ /* xUndisputed */
+/* xUndisputed */
  [data-cid^="3669054-"] .badge-box .bdg {
      border-radius: 6px !important;
      background-image: url("") !important;
