--- a/TM.css
+++ b/TM.css
@@ -42,8 +42,8 @@ element.style {
     top: 0;
     float: right;
     padding: 15px 15px;
-    background: #000000;
-    color: #000;
+    background: #282c35;
+    color: #282c35;
     font-weight: 400;
     font-size: 18px;
     font-family: "Open Sans",sans-serif;
