--- a/Custom.css
+++ b/Custom.css
@@ -1,40 +1,82 @@
-/* Woot */
+/* Dj button */
 
-#woot.crowd-response.disabled.active .bottom {
-    background: #045eb6 !important;
+#dj-button {
+    position: absolute;
+    top: 450px;
+    height: 61px;
+    width: 230px;
+    background: rgba(20, 0, 53, 0.83);
+    border-radius: 4px 4px 4px 4px;
+    cursor: pointer;
+    line-height: 59px;
+    z-index: 8;
 }
-.votes-rs .title.woot {
-    background: #045eb6 !important;
+#dj-button .left {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 76px;
+    height: 100%;
+    border-radius: 4px 0 0 4px;
+    background: #00b5e6;
+    background: -moz-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#00b5e6),color-stop(100%,#009cdd));
+    background: -webkit-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -o-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -ms-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: linear-gradient(to bottom,#1b0034 0,rgba(165, 110, 255, 0.47) 100%);
+        z-index: -1;
 }
-#woot .bottom, #woot.selected {
-    background: #3c74f9;
+#dj-button:hover .left {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 230px;
+    height: 100%;
+    border-radius: 4px 0 0 4px;
+    background: #00b5e6;
+    background: -moz-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#00b5e6),color-stop(100%,#009cdd));
+    background: -webkit-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -o-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -ms-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: linear-gradient(to bottom,#1b0034 0,rgba(165, 110, 255, 0.47) 100%);
+    -webkit-transition-delay: 0,8s;
+    transition-delay: 0,8s;
+    opacity: 1.0;
 }
-/* Grab */
-#grab .bottom, #grab.selected {
-    background: #4a0b8d !important;
-}
-.votes-rs .title.grab {
-    background: #4a0b8d !important;
-}
-
-/* Meh */
-
-#meh .bottom, #meh.selected {
-    background: #ff0319b !important;
-}
-.votes-rs .title.meh {
-    background: #ff0319b !important;
-}
-
-/* Icons */
-
-/* Leave Djing */
 #dj-button.is-leave .left, #dj-button.is-quit .left {
-    background: #ff0319;
-    background: -moz-linear-gradient(top,#f46b40 0,#f04f30 100%);
-    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#f46b40),color-stop(100%,#f04f30));
-    background: -webkit-linear-gradient(top,#f46b40 0,#f04f30 100%);
-    background: -o-linear-gradient(top,#f46b40 0,#f04f30 100%);
-    background: -ms-linear-gradient(top,#f46b40 0,#f04f30 100%);
-    background: linear-gradient(to bottom,#030bff 0,#000000 100%);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 76px;
+    height: 100%;
+    border-radius: 4px 0 0 4px;
+    background: #00b5e6;
+    background: -moz-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#00b5e6),color-stop(100%,#009cdd));
+    background: -webkit-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -o-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -ms-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: linear-gradient(to bottom,#1b0034 0,rgba(165, 110, 255, 0.47) 100%);
+        z-index: -1;
+}
+#dj-button:hover.is-leave:hover .left, #dj-button.is-quit .left:hover {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 230px;
+    height: 100%;
+    border-radius: 4px 0 0 4px;
+    background: #00b5e6;
+    background: -moz-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#00b5e6),color-stop(100%,#009cdd));
+    background: -webkit-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -o-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: -ms-linear-gradient(top,#00b5e6 0,#009cdd 100%);
+    background: linear-gradient(to bottom,#1b0034 0,rgba(165, 110, 255, 0.47) 100%);
+    -webkit-transition-delay: 0,8s;
+    transition-delay: 0,8s;
+    opacity: 1.0;
+        z-index: -1;
 }
