New Update Owner.css

--- a/Owner.css
+++ b/Owner.css
@@ -52,10 +52,10 @@ element.style {
 }
 
 #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
-    content: TM Owner;
+    content: 'TM Owner';
     background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
     padding: 3px 6px;
-    color: none;
+    color: ;
     bottom: 20px;
     position: absolute;
     left: 5px;
@@ -75,8 +75,8 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
-    content: TM Owner;
-    color: none;
+    content: 'TM Owner';
+    color: ;
     position: absolute;
     top: 118px;
     left: 130px;
@@ -85,7 +85,7 @@ element.style {
 /* MsiGaming | Developer = 3669054 */
 
 #user-lists .list .user.id-3669054 .name:after, #chat [data-cid^='4405644-'] .un:after, #user-lists .list .user.id-3669054 .name:after, #chat [data-cid^='4613422-'] .un:after, #user-lists .list .user.id-3669054 .name:after, #chat [data-cid^='4412452-'] .un:after {
-    content: developer/css/theme;
+    content: 'developer/css/theme';
     display: inline-block;
     margin: 4px;
     padding: 0px;
@@ -115,7 +115,7 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta:before {
-    content: CSS/Devs;
+    content: 'CSS/Devs';
     top: 136px;
     left: 110px;
     position: absolute;
@@ -128,8 +128,8 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta:after {
-    content: TM Developer;
-    color: none;
+    content: 'TM Developer';
+    color: ;
     position: absolute;
     top: 121px;
     left: 110px;
