New Update Users CSS

--- a/Users.css
+++ b/Users.css
@@ -7,7 +7,7 @@ i.icon.icon-room {
     height: 40px;
 }
 .icon-room {
-    background: url(http://i.imgur.com/LNXws1G.png) no-repeat;
+    background: url('http://i.imgur.com/LNXws1G.png') no-repeat;
     width: 0px;
     height: 0px;
     background-size: 75%;
