--- a/TM.css
+++ b/TM.css
@@ -7,6 +7,7 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Vip.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Custom%20PP.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Custom.css");
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/WAM.css");
 
 #chat-messages .from .icon {
     position: relative;
