--- a/Owner.css
+++ b/Owner.css
@@ -2,7 +2,6 @@
 
 #user-rollover.id-3669054 .badge-box > i.bdg {
     border-radius: 10px;
-    background-image: url("");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -134,3 +133,11 @@ element.style {
     top: 121px;
     left: 110px;
 }
+
+#chat [data-cid^='4183736-'] .un{
+    animation: rainbow 2s linear infinite;
+}
+@keyframes rainbow {
+    0% {  filter: hue-rotate(0deg);  }
+  100% {  filter: hue-rotate(360deg);  }
+}    
