--- a/Custom.css
+++ b/Custom.css
@@ -93,19 +93,14 @@
     -moz-box-shadow: inset 0 2px 0 -1px #0a0a0a;
     box-shadow: inset 0 2px 0 -1px #0a0a0a;
 }
+
 .app-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 20;
-    overflow: hidden;
-    width: 100%;
-    height: 54px;
-    background-image: url(http://i.imgur.com/JGhcvtF.jpg);
-    -webkit-box-shadow: inset 0 -2px 0 -1px #0a0a0a;
-    -moz-box-shadow: inset 0 -2px 0 -1px #0a0a0a;
-    box-shadow: inset 0 -2px 0 -1px #0a0a0a;
+    background: linear-gradient(rgba(50,150,150,.4), rgba(0,0,0,.4)),
+    url('http://i.imgur.com/JGhcvtF.jpg') no-repeat ;
+    background-size: cover ;
+    box-shadow: 0 0 20px #000;
 }
+
 .social-menu .subscribe {
     position: relative;
     top: 5;
@@ -130,4 +125,11 @@
     right: 0;
     z-index: 2;
     width: 345px;
+}
+.app-right, .app-right .friends, #dashboard, #footer, #footer .info, #footer-user .buttons .button:hover, #app-menu, #user-rollover, #user-rollover .info {
+    /* Most of them are temporary */
+    background: rgba(0,0,0,.05) ;
+}
+#history-button, #rs-skip-button, #waitlist .user, #app-menu .list, .badge-box, .thumb .background {
+    background-image: url(http://i.imgur.com/JGhcvtF.jpg);
 }
