--- a/Custom.css
+++ b/Custom.css
@@ -89,6 +89,7 @@
     width: 100%;
     height: 54px;
     background-image: url(http://i.imgur.com/JGhcvtF.jpg);
+    background: linear-gradient(rgba(50,150,150, 0.0), rgba(50,150,150, 0.3)) ;
     -webkit-box-shadow: inset 0 2px 0 -1px #0a0a0a;
     -moz-box-shadow: inset 0 2px 0 -1px #0a0a0a;
     box-shadow: inset 0 2px 0 -1px #0a0a0a;
@@ -132,4 +133,71 @@
 }
 #history-button, #rs-skip-button, #waitlist .user, #app-menu .list, .badge-box, .thumb .background {
     background-image: url(http://i.imgur.com/JGhcvtF.jpg);
+}
+#app-menu .list .item, #app-menu .appbadges a::before {
+    background-color: rgba(0,0,0,.9);
+    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.9),
+        inset 0 0 1px 2px rgba(50,150,150,.3),
+        inset 0 0 hsla(50,40%,40%,.7);
+    transition: box-shadow 0.5s ease-in-out;
+}
+
+#app-menu .list .item:hover {
+    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.9),
+        inset 0 0 1px 2px rgba(50,150,150,.9),
+        inset -15px 0px hsla(50,40%,40%,.2);
+    background: rgba(0, 0, 0, 0.2);
+}
+
+/*app things*/
+
+#app-menu .android-badge, #app-menu .iphone-badge {
+    position: relative;
+    width: 100%;
+    height: 55px;
+    cursor: pointer;
+    background-size: 130px 40px;
+    background-position: center;
+    display:  block;
+}
+
+#app-menu .appbadges a::before {
+    content: "";
+    float: right;
+    width: 100%;
+    height: 55px;
+    transition: all 0.5s ease-in-out;
+}
+
+#app-menu .appbadges a[href*="ios-left-nav"]::before {
+    content: "";
+    float: right;
+    width: 100%;
+    height: 55px;
+    transition: all 0.5s ease-in-out;
+    position: relative;
+    bottom: 78px;
+}
+
+#app-menu .appbadges a:hover::before {
+    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.9),
+        inset 0 0 1px 2px rgba(30,130,255,.9),
+        inset 0 0 20px 30px hsla(50,30%,30%,.9);
+}
+
+/*not a good solution but it works*/
+
+#app-menu .iphone-badge {
+    top: -134px;
+    margin-top: 0px;
+}
+
+#app-menu .android-badge {
+    top: -56px;
+    margin-top: 0px;
+}
+
+#app-menu .appbadges {
+    padding-top: 0px;
+    padding-left: 0px;
 }
