--- a/Developer.css
+++ b/Developer.css
@@ -42,7 +42,7 @@
     background-position: center center;
 }
 
-#user-lists .list.room .user .icon-chat-cohost {
+.id-5712221 > #user-lists .list.room .user .icon-chat-cohost {
     background: url('https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png')!important;
 }
 
