--- a/TM.css
+++ b/TM.css
@@ -9,6 +9,94 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Custom.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/WAM.css");
 
+#room-settings .general-settings .option button.off {
+    background: linear-gradient(to bottom right, #314673, #263344);
+}
+#room-settings .general-settings .option.enabled>button.off {
+    color: white;
+    background: #0A1328;
+}
+#room-settings .general-settings .option.enabled>button.on {
+    background: linear-gradient(to bottom right, #314673, #263344);
+}
+#room-settings .general-settings .value {
+    color: #6bd9ea;
+    text-shadow: 1px;
+    text-align: center;
+    font-weight: bold;
+    width: 60% ;
+    overflow: hidden;
+}
+#room-settings .general-settings .value a {
+    color: #4298a5 ;
+    text-shadow: 1px;
+}
+#room-settings .general-settings .welcome {
+    margin-left: 22%;
+}
+#room-settings .general-settings .edit span {
+    display: none;
+}
+#room-settings .general-settings .edit i {
+    display: none;
+}
+#room-settings {
+    background: url('https://i.imgur.com/4uxgKWE.jpg?1') no-repeat ;
+    background-size: cover ;
+}
+#room-settings .general-settings .option button {
+    border-radius: 5px;
+    background: #0A1328;
+    color: white;
+}
+#room-settings .general-settings .description {
+    background: rgba(255, 255, 255, 0.08);
+    text-align: center;
+    font-weight: bold;
+    width: 60% ;
+    border-radius: 30px;
+    margin-left: 22%;
+    height: 50% ;
+}
+#room-settings .general-settings .option .title {
+    color: #c2f2f9;
+}
+#room-settings .general-settings .panel .title {
+    display: none;
+}
+#room-settings .general-settings .description textarea {
+    min-width: 50% ;
+    max-width: 50% ;
+    width: 50% ;
+}
+#room-settings .general-settings .description .value {
+    width: 100% ;
+    height: 100% ;
+}
+#room-settings .general-settings .description .value a:nth-of-type(7) {
+    display: none;
+}
+.dropdown dt {
+    background: #0A1328 ;
+}
+.dropdown dd .row {
+    background: #0A1328 ;
+    color: white;
+}
+#room-settings-menu {
+    background: #0A1328 ;
+    opacity: 0.50;
+    filter: alpha(opacity=70);
+    border-radius: 20px;
+}
+#room-settings-menu .item.selected {
+    background: rgba(37, 58, 109, 0.6);
+    border-radius: 7px;
+    color: white;
+}
+#room-settings-menu .title {
+    color: #5b9eea;
+}
 #chat-messages .from .icon {
     position: relative;
     top: 2px;
