--- a/Owner.css
+++ b/Owner.css
@@ -27,15 +27,15 @@
 /* MsiGaming | Developer = 3669054 */
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px;
+    height: 200px;
 }
 
 element.style {
-    height: 150px;
+    height: 200px;
 }
 
 #user-rollover .meta {
-    min-height: 150px;
+    min-height: 200px;
 }
 
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
@@ -51,7 +51,7 @@ element.style {
 }
 
 #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
-    content: 'TM Owner';
+    content: 'TM Owner/Developer';
     background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
     padding: 3px 6px;
     color: ;
@@ -63,7 +63,7 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px ;
+    height: 200px ;
 }
 
 #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
@@ -74,8 +74,8 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
-    content: 'TM Owner';
-    color: ;
+    content: 'TM Owner/Developer';
+    color: blue;
     position: absolute;
     top: 118px;
     left: 130px;
@@ -99,18 +99,18 @@ element.style {
 /* MsiGaming | Developer = 3669054 */
 
 #user-rollover.id-3669054 .meta {
-    height: 150px;
+    height: 200px;
 }
 
 element.style {
-    height: 150px;
+    height: 200px;
 }
 
 element.style {
-    weight: 35.999%;
+    weight: 40.000%;
 
 #user-rollover .meta {
-    min-height: 150px;
+    min-height: 200px;
 }
 
 #user-rollover.id-3669054 .meta:before {
@@ -128,7 +128,7 @@ element.style {
 
 #user-rollover.id-3669054 .meta:after {
     content: 'TM Developer';
-    color: ;
+    color: blue;
     position: absolute;
     top: 121px;
     left: 110px;
