--- a/Custom.css
+++ b/Custom.css
@@ -2,31 +2,27 @@
 
 #dj-button {
     position: absolute;
-    top: 450px;
-    height: 61px;
-    width: 230px;
-    background: rgba(20, 0, 53, 0.83);
-    border-radius: 4px 4px 4px 4px;
+    top: px;
+    height: 60px;
+    width: 255px;
+    background: rgba(25, 0, 65, 0.50);
+    border-radius: 10px 10px 10px 10px;
     cursor: pointer;
     line-height: 59px;
-    z-index: 8;
+    z-index: 10;
 }
+
 #dj-button .left {
     position: absolute;
     left: 0;
     top: 0;
-    width: 76px;
+    width: 80px;
     height: 100%;
     border-radius: 4px 0 0 4px;
-    background: #00b5e6;
-    background: -moz-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#00b5e6),color-stop(100%,#009cdd));
-    background: -webkit-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -o-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -ms-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: linear-gradient(to bottom,#1b0034 0,rgba(165, 110, 255, 0.47) 100%);
-        z-index: -1;
+    background: linear-gradient(to bottom,#1b0034 0,rgba(25, 0, 65, 0.50) 100%);
+    z-index: -1;
 }
+
 #dj-button:hover .left {
     position: absolute;
     left: 0;
@@ -34,33 +30,23 @@
     width: 230px;
     height: 100%;
     border-radius: 4px 0 0 4px;
-    background: #00b5e6;
-    background: -moz-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#00b5e6),color-stop(100%,#009cdd));
-    background: -webkit-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -o-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -ms-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: linear-gradient(to bottom,#1b0034 0,rgba(165, 110, 255, 0.47) 100%);
-    -webkit-transition-delay: 0,8s;
-    transition-delay: 0,8s;
+    background: linear-gradient(to bottom,#1b0034 0,rgba(25, 0, 65, 0.5) 100%);
+    -webkit-transition-delay: 0,5s;
+    transition-delay: 0,5s;
     opacity: 1.0;
 }
+
 #dj-button.is-leave .left, #dj-button.is-quit .left {
     position: absolute;
     left: 0;
     top: 0;
-    width: 76px;
+    width: 80px;
     height: 100%;
     border-radius: 4px 0 0 4px;
-    background: #00b5e6;
-    background: -moz-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#00b5e6),color-stop(100%,#009cdd));
-    background: -webkit-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -o-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -ms-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: linear-gradient(to bottom,#1b0034 0,rgba(165, 110, 255, 0.47) 100%);
-        z-index: -1;
+    background: linear-gradient(to bottom,#1b0034 0,rgba(25, 0, 65, 0.5) 100%);
+    z-index: -1;
 }
+
 #dj-button:hover.is-leave:hover .left, #dj-button.is-quit .left:hover {
     position: absolute;
     left: 0;
@@ -68,36 +54,31 @@
     width: 230px;
     height: 100%;
     border-radius: 4px 0 0 4px;
-    background: #00b5e6;
-    background: -moz-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#00b5e6),color-stop(100%,#009cdd));
-    background: -webkit-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -o-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: -ms-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background: linear-gradient(to bottom,#1b0034 0,rgba(165, 110, 255, 0.47) 100%);
+    background: linear-gradient(to bottom,#1b0034 0,rgba(25, 0, 65, 0.5) 100%);
     -webkit-transition-delay: 0,8s;
     transition-delay: 0,8s;
     opacity: 1.0;
-        z-index: -1;
+    z-index: -1;
 }
 
 /* down - bar */
+
 #footer {
     position: absolute;
     left: 0;
     z-index: 90;
     width: 100%;
-    height: 54px;
-    background-image: url(http://i.imgur.com/JGhcvtF.jpg);
-    background: linear-gradient(rgba(50,150,150, 0.0), rgba(50,150,150, 0.3)) ;
+    height: 50px;
+    background-image: url(https://i.imgur.com/6NsOwF3.jpg?1);
+    background: linear-gradient(rgba(25,0,65, 0.1), rgba(25,0,65, 0.1)) ;
     -webkit-box-shadow: inset 0 2px 0 -1px #0a0a0a;
     -moz-box-shadow: inset 0 2px 0 -1px #0a0a0a;
     box-shadow: inset 0 2px 0 -1px #0a0a0a;
 }
 
 .app-header {
-    background: linear-gradient(rgba(50,150,150,.4), rgba(0,0,0,.4)),
-    url('http://i.imgur.com/JGhcvtF.jpg') no-repeat ;
+    background: linear-gradient(rgba(25,0,65 ,0.1), rgba(25,0,65,0.1)),
+    url('https://i.imgur.com/6NsOwF3.jpg?1') no-repeat ;
     background-size: cover ;
     box-shadow: 0 0 20px #000;
 }
@@ -107,7 +88,7 @@
     top: 5;
     float: right;
     padding: 15px 15px;
-    background-image: url("https://eashankadam.files.wordpress.com/2014/03/background.jpg");
+    background-image: url("https://i.imgur.com/6NsOwF3.jpg?1");
     color: #eee;
     background-position-x: center;
     font-weight: 400;
@@ -117,7 +98,7 @@
 }
 
 #room .app-right {
-       background-color: #111317;
+    background-color: #111317;
 }
 
 .app-right {
@@ -127,26 +108,29 @@
     z-index: 2;
     width: 345px;
 }
+
 .app-right, .app-right .friends, #dashboard, #footer, #footer .info, #footer-user .buttons .button:hover, #app-menu, #user-rollover, #user-rollover .info {
     /* Most of them are temporary */
-    background: rgba(0,0,0,.05) ;
+    background: rgba(0,0,0,.1) ;
 }
+
 #history-button, #rs-skip-button, #waitlist .user, #app-menu .list, .badge-box, .thumb .background {
-    background-image: url(http://i.imgur.com/JGhcvtF.jpg);
+    background-image: url(https://i.imgur.com/6NsOwF3.jpg?1);
 }
+
 #app-menu .list .item, #app-menu .appbadges a::before {
-    background-color: rgba(0,0,0,.9);
-    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.9),
-        inset 0 0 1px 2px rgba(50,150,150,.3),
-        inset 0 0 hsla(50,40%,40%,.7);
+    background-color: rgba(0,0,0,.1);
+    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.1),
+        inset 0 0 1px 2px rgba(50,150,150,.1),
+        inset 0 0 hsla(50,40%,40%,.1);
     transition: box-shadow 0.5s ease-in-out;
 }
 
 #app-menu .list .item:hover {
-    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.9),
-        inset 0 0 1px 2px rgba(50,150,150,.9),
+    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.1),
+        inset 0 0 1px 2px rgba(50,150,150,.1),
         inset -15px 0px hsla(50,40%,40%,.2);
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.1);
 }
 
 /*app things*/
@@ -158,7 +142,7 @@
     cursor: pointer;
     background-size: 130px 40px;
     background-position: center;
-    display:  block;
+    display: block;
 }
 
 #app-menu .appbadges a::before {
@@ -180,9 +164,9 @@
 }
 
 #app-menu .appbadges a:hover::before {
-    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.9),
-        inset 0 0 1px 2px rgba(30,130,255,.9),
-        inset 0 0 20px 30px hsla(50,30%,30%,.9);
+    box-shadow: inset 0 -1px 0 0 rgba(25,0,65,.5),
+        inset 0 0 1px 2px rgba(25,0,65,.5),
+        inset 0 0 20px 30px hsla(25,30%,30%,.5);
 }
 
 /*not a good solution but it works*/
@@ -201,3 +185,4 @@
     padding-top: 0px;
     padding-left: 0px;
 }
+
