Update Staff Css

--- a/Staff.css
+++ b/Staff.css
@@ -119,7 +119,7 @@
 #user-rollover.id-4766242 > .info > .role span:after
 {
     visibility: visible;
-    content:'TM Helper';
+    content:'/TM Helper';
 
 /*More comming soon...*/
 /*http://www.gotigersolutions.com/images/medal-gold.png*/
