--- a/TM.css
+++ b/TM.css
@@ -49,7 +49,7 @@
 }
 
 #room-settings {
-    background: url('https://i.imgur.com/4uxgKWE.jpg?1') no-repeat ;
+    background: url('https://i.imgur.com/6FWQBBR.jpg?1') no-repeat ;
     background-size: cover ;
 }
 
